infra/kubernetes/backend/homolog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: insurance-management-homolog
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: http
